--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "binary-trees": "^0.1.3",
     "bintrees": "^1.0.1",
     "tinyqueue": "^1.1.0"
   }
